@@ -6,7 +6,7 @@ TEXT_START_ADDR=0x1000
 STACK_ADDR='ALIGN (0x40000) + 0x40000'
 MAXPAGESIZE=128
 ARCH=sh
-MACHINE=
+MACHINE=sh5
 ALIGNMENT=8
 TEMPLATE_NAME=elf32
 GENERATE_SHLIB_SCRIPT=yes
