@@ -1,3 +1,7 @@
+Wed Apr 17 19:23:14 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* emulparams/shelf32.sh (MACHINE): Now sh5.
+
 2002-04-17  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
 
 	* ldgram.y: Fix syntax warning.
